--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -16,9 +15,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="607.0" prefWidth="1273.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
+<AnchorPane prefHeight="922.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
    <children>
-      <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="629.0" prefWidth="1280.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="-20.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="-2.0">
+      <VBox layoutX="-12.0" layoutY="-2.0" prefHeight="1053.0" prefWidth="1248.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="-129.0" AnchorPane.leftAnchor="-12.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="-2.0">
          <padding><Insets bottom="10" left="10" right="10" top="10" /></padding>
 
 
@@ -37,69 +36,74 @@
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtEmpId" onAction="#eidOnAction" prefHeight="25.0" prefWidth="547.0" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-               <Label text="First Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <Label text="First Name:" textFill="WHITE" GridPane.rowIndex="2">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtFirstName" onAction="#efirstnameOnAction" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <TextField fx:id="txtFirstName" promptText="e.g.,Johne" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-               <Label text="Last Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <Label text="Last Name:" textFill="WHITE" GridPane.rowIndex="3">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtLastName" onAction="#elastnameOnAction" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               <TextField fx:id="txtLastName" promptText="e.g.,Fernando" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-               <Label text="Department ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <Label text="Department ID:" textFill="WHITE" GridPane.rowIndex="4">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtDeptId" onAction="#departmentOnAction" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               <TextField fx:id="txtDeptId" promptText="e.g.,D001" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-               <Label fx:id="dob" text="Date of Birth:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <Label text="Date of Birth:" textFill="WHITE" GridPane.rowIndex="5">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <DatePicker fx:id="dateDOB" onAction="#dobOnAction" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-               <Label text="Address:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
+               <Label text="Address:" textFill="WHITE" GridPane.rowIndex="6">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtAddress" onAction="#addressOnAction" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+               <TextField fx:id="txtAddress" prefHeight="25.0" prefWidth="285.0" promptText="Enter the full residential address of the employee" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-               <Label text="Join Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="6">
+               <Label text="Join Date:" textFill="WHITE" GridPane.rowIndex="7">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <DatePicker fx:id="dateJoinDate" onAction="#jdOnAction" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-               <Label text="Age:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="7">
+               <Label text="Age:" textFill="WHITE" GridPane.rowIndex="8">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtAge" onAction="#ageOnAction" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+               <TextField fx:id="txtAge" promptText="e.g.,35" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 
-               <Label text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="8">
+               <Label text="Email:" textFill="WHITE" GridPane.rowIndex="9">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+               <TextField fx:id="txtEmail" promptText="e.g.,employee@email.com" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 
-               <Label text="Contact:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="9">
+               <Label text="Contact:" textFill="WHITE" GridPane.rowIndex="10">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtContact" onAction="#contactOnAction" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+               <TextField fx:id="txtContact" promptText="0700000000" GridPane.columnIndex="1" GridPane.rowIndex="10" />
 
-               <Label text="Position ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="10">
+               <Label text="Position ID:" textFill="WHITE" GridPane.rowIndex="11">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtPositionId" onAction="#pidOnAction" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+               <TextField fx:id="txtPositionId" promptText="e.g.,P001" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+               <Label fx:id="lblEmployeeId" text="1" textFill="WHITE" GridPane.columnIndex="1">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="txtDob" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+               <TextField fx:id="txtJoinDate" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             </children>
             <rowConstraints>
+               <RowConstraints />
                <RowConstraints />
                <RowConstraints />
                <RowConstraints />
@@ -115,43 +119,46 @@
          </GridPane>
 
 
-         <HBox alignment="CENTER" spacing="10">
-            <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #ffeaa7;" text="Save">
+         <HBox alignment="CENTER" prefHeight="45.0" prefWidth="1176.0" spacing="10">
+            <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #00cec9;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #00cec9;" text="Update">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #ff7675;" text="Delete">
+            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #ff7675;" text="Delete">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnClear" onAction="#resetOnAction" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: #b2bec3;" text="Reset">
+            <Button fx:id="btnReset" onAction="#resetOnAction" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #b2bec3;" text="Reset">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
          </HBox>
 
 
-         <TableView fx:id="tblEmployees" onSort="#tblOnAction" prefHeight="80.0" prefWidth="945.0">
+         <TableView fx:id="tblEmployees" onMouseClicked="#onClickTable" prefHeight="353.0" prefWidth="1190.0">
             <columns>
                <TableColumn fx:id="colEmpId" prefWidth="66.00000190734863" text="Emp ID" />
-               <TableColumn fx:id="colFirstName" prefWidth="93.99999237060547" text="First Name" />
-               <TableColumn fx:id="colLastName" prefWidth="132.6666717529297" text="Last Name" />
-               <TableColumn fx:id="colDeptId" prefWidth="59.3333740234375" text="Dept ID" />
-               <TableColumn fx:id="colDOB" prefWidth="84.0" text="DOB" />
+               <TableColumn fx:id="colFirstName" prefWidth="107.99999237060547" text="First Name" />
+               <TableColumn fx:id="colLastName" prefWidth="110.00004577636719" text="Last Name" />
+               <TableColumn fx:id="colDeptId" prefWidth="71.33331298828125" text="Dept ID" />
+               <TableColumn fx:id="colDOB" prefWidth="82.66668701171875" text="DOB" />
                <TableColumn fx:id="colAddress" prefWidth="110.66665649414062" text="Address" />
                <TableColumn fx:id="colJoinDate" prefWidth="100.66668701171875" text="Join Date" />
                <TableColumn fx:id="colAge" prefWidth="60.66656494140625" text="Age" />
-               <TableColumn fx:id="colEmail" prefWidth="145.33331298828125" text="Email" />
-               <TableColumn fx:id="colContact" minWidth="0.0" prefWidth="132.0" text="Contact" />
-               <TableColumn fx:id="colPositionId" prefWidth="97.33331298828125" text="Position ID" />
+               <TableColumn fx:id="colEmail" prefWidth="112.66668701171875" text="Email" />
+               <TableColumn fx:id="colContact" minWidth="0.0" prefWidth="118.6666259765625" text="Contact" />
+               <TableColumn fx:id="colPositionId" prefWidth="144.0" text="Position ID" />
             </columns>
             <cursor>
                <Cursor fx:constant="CROSSHAIR" />
             </cursor>
+            <VBox.margin>
+               <Insets left="10.0" right="5.0" />
+            </VBox.margin>
          </TableView>
       </VBox>
    </children>
