--- a/main/resources/view/Ot.fxml
+++ b/main/resources/view/Ot.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -36,13 +35,12 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtOtId" onAction="#otIdOnAction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtEmployeeId" onAction="#eIdOnAction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label text="Salary ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
                <font>
@@ -54,19 +52,24 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtOtHours" promptText="e.g. 4.5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="txtOtHours" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
                 <Label text="Rate Per Hour:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtRatePerHour" promptText="e.g. 200.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="txtRatePerHour" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
                 <Label text="OT Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <DatePicker fx:id="dpOtDate" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="lblOt" text="1" textFill="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtOtDate" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <rowConstraints>
                <RowConstraints />
                <RowConstraints />
@@ -98,7 +101,7 @@
             </HBox>
 
 
-            <TableView fx:id="tblOtRecords" prefHeight="250" prefWidth="754.0">
+            <TableView fx:id="tblOtRecords" onMouseClicked="#onClickTable" prefHeight="250" prefWidth="754.0">
                 <columns>
                     <TableColumn fx:id="colOtId" prefWidth="100" text="OT ID" />
                     <TableColumn fx:id="colEmployeeId" prefWidth="123.33334350585938" text="Employee ID" />
