--- a/main/resources/view/Positions.fxml
+++ b/main/resources/view/Positions.fxml
@@ -38,7 +38,6 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtPositionId" prefHeight="25.0" prefWidth="447.0" promptText="P001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label text="Position Title:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <font>
@@ -51,6 +50,11 @@
                   <Font name="System Bold" size="12.0" />
                </font></Label>
                 <TextField fx:id="txtSalaryGrade" promptText="e.g. Grade A" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lblPosition" text="1" textFill="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
             <rowConstraints>
                <RowConstraints />
                <RowConstraints />
@@ -60,7 +64,6 @@
 
 
             <HBox alignment="CENTER" spacing="15">
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Button" />
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -80,7 +83,7 @@
             </HBox>
 
 
-            <TableView fx:id="tblPositions" prefHeight="250" prefWidth="650">
+            <TableView fx:id="tblPositions" onMouseClicked="#onClickTable" prefHeight="250" prefWidth="650">
                 <columns>
                     <TableColumn fx:id="colPositionId" prefWidth="154.66668319702148" text="Position ID" />
                     <TableColumn fx:id="colPositionTitle" prefWidth="343.99998474121094" text="Position Title" />
