--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -14,10 +14,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="677.0" prefWidth="1272.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController">
+<AnchorPane prefHeight="677.0" prefWidth="1431.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.SalaryController">
 
     <children>
-        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="657.0" prefWidth="1243.0" spacing="20">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="657.0" prefWidth="959.0" spacing="20">
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
@@ -25,7 +25,10 @@
             <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Salary Management" textFill="WHITE">
             <font>
                <Font name="System Bold" size="12.0" />
-            </font></Label>
+            </font>
+            <VBox.margin>
+               <Insets right="300.0" />
+            </VBox.margin></Label>
 
 
             <GridPane hgap="10" vgap="12">
@@ -38,7 +41,6 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtSalaryId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <font>
@@ -75,6 +77,11 @@
                   <Font name="System Bold" size="12.0" />
                </font></Label>
                 <TextField fx:id="txtNetSalary" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label fx:id="lblSalaryId" text="1" textFill="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
             <rowConstraints>
                <RowConstraints />
                <RowConstraints />
@@ -88,11 +95,6 @@
 
 
             <HBox alignment="CENTER" spacing="15">
-            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addOnAction" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: #a29bfe;" text="Add">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -112,15 +114,15 @@
             </HBox>
 
 
-            <TableView fx:id="tblSalary" prefHeight="250" prefWidth="750">
+            <TableView fx:id="tblSalary" onMouseClicked="#onClickTable" prefHeight="250" prefWidth="1149.0">
                 <columns>
-                    <TableColumn fx:id="colSalaryId" prefWidth="156.66665267944336" text="Salary ID" />
-                    <TableColumn fx:id="colEmployeeId" prefWidth="128.6666717529297" text="Employee ID" />
-                    <TableColumn fx:id="colBasicSalary" prefWidth="150.66665649414062" text="Basic Salary" />
-                    <TableColumn fx:id="colOtHours" prefWidth="134.66668701171875" text="OT Hours" />
-                    <TableColumn fx:id="colDeduction" prefWidth="200.0" text="Deduction" />
-                    <TableColumn fx:id="colDeductionType" prefWidth="177.3333740234375" text="Deduction Type" />
-                    <TableColumn fx:id="colNetSalary" prefWidth="254.66668701171875" text="Net Salary" />
+                    <TableColumn fx:id="colSalaryId" prefWidth="91.33334732055664" text="Salary ID" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="112.66668701171875" text="Employee ID" />
+                    <TableColumn fx:id="colBasicSalary" prefWidth="146.66661071777344" text="Basic Salary" />
+                    <TableColumn fx:id="colOtHours" prefWidth="106.66665649414062" text="OT Hours" />
+                    <TableColumn fx:id="colDeduction" prefWidth="132.00009155273438" text="Deduction" />
+                    <TableColumn fx:id="colDeductionType" prefWidth="141.3333740234375" text="Deduction Type" />
+                    <TableColumn fx:id="colNetSalary" prefWidth="185.333251953125" text="Net Salary" />
                 </columns>
             </TableView>
         </VBox>
