--- a/main/resources/view/Dashboard.fxml
+++ b/main/resources/view/Dashboard.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -11,68 +12,95 @@
 <AnchorPane prefHeight="478.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DashboardController">
    <children>
 
-      <VBox prefHeight="657.0" prefWidth="204.0" spacing="10" style="-fx-background-color: linear-gradient(to right, #11998e, #38ef7d); -fx-padding: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutY="53.333333333333336" prefHeight="722.0" prefWidth="240.0" spacing="10" style="-fx-padding: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="53.0">
          <children>
-            <Label prefHeight="27.0" prefWidth="117.0" style="-fx-background-color: #ecf0f1;" text="Dashboard EMS" textFill="#17aa06">
+            <Button fx:id="btnEmployee" onAction="#employeeOnAction" prefHeight="19.0" prefWidth="148.0" style="-fx-background-color: #f5f6fa;" text="Employee" textFill="#273c75">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
-            </Label>
-            <ImageView fitHeight="117.0" fitWidth="126.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/GREEN%20LOOP.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnEmployee" onAction="#employeeOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Employee" textFill="WHITE">
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnAttendance" onAction="#attendanceOnAction" prefWidth="160" style="-fx-background-color: #f5f6fa;" text="Attendance" textFill="#273c75">
                <font>
                   <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnOT" onAction="#salaryOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Salary" textFill="WHITE">
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnDepartment" onAction="#departmentOnAction" prefWidth="160" style="-fx-background-color: #f5f6fa;" text="Department" textFill="#273c75">
                <font>
                   <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnTask" onAction="#taskOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Task" textFill="WHITE">
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnPosition" onAction="#positionOnAction" prefHeight="29.0" prefWidth="133.0" style="-fx-background-color: #f5f6fa;" text="Position" textFill="#273c75">
                <font>
                   <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnLeave" onAction="#leaveOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Leave" textFill="WHITE">
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnTask" onAction="#taskOnAction" prefHeight="29.0" prefWidth="113.0" style="-fx-background-color: #f5f6fa;" text="Task" textFill="#273c75">
                <font>
                   <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnSalary" onAction="#otOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="OT" textFill="WHITE">
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnLeave" onAction="#leaveOnAction" prefHeight="29.0" prefWidth="120.0" style="-fx-background-color: #f5f6fa;" text="Leave" textFill="#273c75">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnSalary" onAction="#otOnAction" prefHeight="25.0" prefWidth="106.0" style="-fx-background-color: #f5f6fa;" text="OT" textFill="#273c75">
                <font>
                   <Font name="Arial Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnDeduction" onAction="#deductionOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Deduction" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnDepartment" onAction="#departmentOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Department" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnPosition" onAction="#positionOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Position" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnAttendance" onAction="#attendanceOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="Attendance" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnUser" onAction="#userOnAction" prefWidth="160" style="-fx-background-color: #16a085;" text="User" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font></Button>
-            <Button fx:id="btnEquipment" mnemonicParsing="false" onAction="#equipmentOnAction" prefWidth="160.0" style="-fx-background-color: #16a085;" text="Equipment" textFill="WHITE">
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnDeduction" onAction="#deductionOnAction" prefHeight="29.0" prefWidth="145.0" style="-fx-background-color: #f5f6fa;" text="Deduction" textFill="#273c75">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
-            </Button>
-            <Button fx:id="btnSetting" mnemonicParsing="false" onAction="#settingOnAction" prefWidth="160.0" style="-fx-background-color: #16a085;" text=" Setting" textFill="#e4ff37">
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnOT" onAction="#salaryOnAction" prefHeight="29.0" prefWidth="121.0" style="-fx-background-color: #f5f6fa;" text="Salary" textFill="#273c75">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnEquipment" mnemonicParsing="false" onAction="#equipmentOnAction" prefHeight="29.0" prefWidth="151.0" style="-fx-background-color: #f5f6fa;" text="Equipment" textFill="#273c75">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </Button>
+            <Button fx:id="btnUser" onAction="#userOnAction" prefHeight="29.0" prefWidth="113.0" style="-fx-background-color: #f5f6fa;" text="User" textFill="#273c75">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin></Button>
+            <Button fx:id="btnSetting" mnemonicParsing="false" onAction="#settingOnAction" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: #f5f6fa;" text=" Setting">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
+            </Button>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </VBox>
 
@@ -81,5 +109,21 @@
          <children>
             <AnchorPane fx:id="ancpanal" layoutY="101.0" prefHeight="657.0" prefWidth="490.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children></AnchorPane>
+      <Label layoutY="14.0" prefHeight="29.0" prefWidth="174.0" style="-fx-background-color: #00d2d3;" text="Green Polyee Loop" textFill="#1c076e">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+         <padding>
+            <Insets left="5.0" />
+         </padding>
+         <rotationAxis>
+            <Point3D x="5.0" y="5.0" z="5.0" />
+         </rotationAxis>
+      </Label>
+      <Label layoutX="160.0" layoutY="30.0" prefHeight="25.0" prefWidth="40.0" text="EMS" textFill="#080696">
+         <font>
+            <Font name="System Bold Italic" size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
