--- a/main/resources/view/login.fxml
+++ b/main/resources/view/login.fxml
@@ -6,16 +6,23 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="1006.0" style="-fx-background-color: linear-gradient(to right, #11998e, #38ef7d);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LoginController">
+<AnchorPane prefHeight="342.0" prefWidth="938.0" style="-fx-background-color: linear-gradient(to right, #11998e, #38ef7d);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LoginController">
 
    <children>
+      <ImageView fitHeight="390.0" fitWidth="524.0" layoutX="485.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/smiling-business-team-standing-conference-room.jpg" />
+         </image>
+      </ImageView>
 
 
-      <VBox alignment="CENTER" layoutX="267.0" layoutY="19.0" prefHeight="361.0" prefWidth="789.0" spacing="15.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="19.0">
+      <VBox alignment="CENTER" layoutX="7.0" layoutY="20.0" prefHeight="302.0" prefWidth="458.0" spacing="15.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="540.0" AnchorPane.topAnchor="20.0">
 
          <effect>
             <DropShadow color="#00000055" radius="10.0" />
